<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/prevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prevMonth" >
        </Button>

        <TextView
            android:id="@+id/yearMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="TextView"
            android:textSize="24sp" >
        </TextView>

        <Button
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/nextMonth" >
        </Button>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center_horizontal"
                android:text="@string/sunday"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/Monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center_horizontal"
                android:text="@string/monday"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/Tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center_horizontal"
                android:text="@string/tuesday"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center_horizontal"
                android:text="@string/wednesday"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center_horizontal"
                android:text="@string/thursday"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/Friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center_horizontal"
                android:text="@string/friday"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/Saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center_horizontal"
                android:text="@string/saturday"
                android:textSize="16sp" >
            </TextView>
        </TableRow>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="fill_parent"
        android:layout_height="356dp"
        android:layout_weight="0.88" >

    </GridView>

</LinearLayout>